janetrs_macros/tests/08-wrong-args.stderr
error: Invalid argument. Valid arguments: `check_mut_ref`.
 --> $DIR/08-wrong-args:4:12
  |
4 | #[janet_fn(a)]
  |            ^
